# location-protocol-spec

./: .gitignore  README.md  mkdocs.yaml  netlify.toml  pyproject.toml
docs/: index.md  location-protocol-spec.md
docs/spec-page/: index.md
docs/spec-page/appendices/: eas-integration.md  geojson-alignment.md  index.md  srs.md
docs/spec-page/implementation/: encoding.md  examples.md  index.md  workflow.md
docs/spec-page/introduction/: bridging-concepts.md  core-concepts.md  index.md  overview.md
docs/spec-page/specification/: composable-fields.md  data-model.md  index.md  location-types.md  schemas.md
docs/spec-page/stylesheets/: extra.css
json-schema/: schema.json
loccation-attestation/: README.md  create-location-attestations.md  location-attestation.md
loccation-attestation-spec/: README.md  location-attestation-spec.md
scripts/: generate_encoding_example.py  verify_json_schema.py
